#pragma once

class SageStoreServer
{
public:
    SageStoreServer();
    ~SageStoreServer();

    // Public methods
    void run();

private:
};